2015-02-25  Brady Eidson  <beidson@apple.com>

        Layout test support for user content filters
        https://bugs.webkit.org/show_bug.cgi?id=142018

        Reviewed by Tim Horton.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues): Clear all user content filters between tests.

        * WebKitTestRunner/mac/TestControllerMac.mm:
        (WTR::TestController::platformConfigureViewForTest): For all tests with usercontentfilter/ in their path try to load a matching .json
          file before loading the test itself.

2015-02-24  Sam Weinig  <sam@webkit.org>

        Convert WebEditingTester to use xcconfig files
        https://bugs.webkit.org/show_bug.cgi?id=141879

        Reviewed by Darin Adler.

        Add xcconfig files to WebEditingTester based on the ones used by MiniBrowser.

        * WebEditingTester/Configurations: Added.
        * WebEditingTester/Configurations/Base.xcconfig: Added.
        * WebEditingTester/Configurations/DebugRelease.xcconfig: Added.
        * WebEditingTester/WebEditingTester.xcodeproj/project.pbxproj:

2015-02-24  Andy Estes  <aestes@apple.com>

        Teach MiniBrowser how to disable per-window web processes
        https://bugs.webkit.org/show_bug.cgi?id=141988

        Reviewed by Darin Adler.

        * MiniBrowser/mac/AppDelegate.m:
        (defaultConfiguration): Created a _WKProcessPoolConfiguration with maximumProcessCount == 1 if per-window web processes are disabled.
        * MiniBrowser/mac/SettingsController.h:
        * MiniBrowser/mac/SettingsController.m:
        (-[SettingsController _populateMenu]): Added a new Settings menu item.
        (-[SettingsController validateMenuItem:]): Validated the new Settings menu item.
        (-[SettingsController togglePerWindowWebProcessesDisabled:]): Displayed an alert informing the user that MiniBrowser must be restarted for the setting to take effect.