@@ -1,3 +1,14 @@
+2015-02-25  Youenn Fablet  <youenn.fablet@crf.canon.fr>
+
+        W3C test importer should use argparse instead of optparse
+        https://bugs.webkit.org/show_bug.cgi?id=142013
+
+        Reviewed by Bem Jones-Bey.
+
+        * Scripts/webkitpy/w3c/test_importer.py:
+        (main): Updating according argparse.
+        (parse_args): Moving from optparse to argparse.
+
 2015-02-25  Brady Eidson  <beidson@apple.com>
 
         Layout test support for user content filters
